@@ -50,6 +50,9 @@ Trunk (unreleased changes)
     HADOOP-6526. Need mapping from long principal names to local OS 
     user names. (boryas)
 
+    HADOOP-6814. Adds an API in UserGroupInformation to get the real
+    authentication method of a passed UGI. (Jitendra Pandey via ddas)
+
   BUG FIXES
     HADOOP-6638. try to relogin in a case of failed RPC connection (expired tgt) 
     only in case the subject is loginUser or proxyUgi.realUser. (boryas)
